# rust-tiny-gfs

doc/notes/: GFS_dedign.md  planning.md
src/: Cargo.toml
src/catalogue_master/: Cargo.toml  build.rs  build.sh  run.sh
src/catalogue_master/src/: lib.rs  main.rs
src/catalogue_master/src/chunk/: mod.rs  operator.rs  service.rs
src/catalogue_master/src/chunk/idgenerator/: memory.rs  mod.rs
src/catalogue_master/src/chunk/storage/: memory.rs  mod.rs
src/catalogue_master/src/error/: mod.rs
src/catalogue_master/src/filesys/: mod.rs
src/catalogue_master/src/idgenerator/: mod.rs
src/catalogue_master/src/iowrap/: logfile.rs  mod.rs
src/catalogue_master/src/proto/: catalogue.rs  chunk_handler.rs  mod.rs
src/catalogue_master/src/serdeser/: kvserdeser.rs  mod.rs
src/catalogue_master/src/server/: mod.rs  service.rs
src/catalogue_master/src/server/allocer/: mod.rs
src/catalogue_master/src/server/filemgr/: mod.rs
src/catalogue_master/src/server/metadata/: memory.rs  mod.rs
src/catalogue_master/src/service/: mod.rs
src/catalogue_master/src/service/storage/: mem_disk.rs
src/catalogue_master/src/storage/: mod.rs
src/catalogue_master/tests/chunk_handler_heartbeat/: Cargo.toml
src/catalogue_master/tests/chunk_handler_heartbeat/src/: main.rs
src/catalogue_master/tests/chunk_handler_register/: Cargo.toml
src/catalogue_master/tests/chunk_handler_register/src/: main.rs
src/chunk_server/: Cargo.toml
src/examples/tracing-test/: Cargo.toml  build.sh  run.sh
src/examples/tracing-test/src/: lib.rs  main.rs
src/examples/tracing-test/src/basic/: mod.rs
src/examples/tracing-test/src/custom_field/: mod.rs
src/examples/tracing-test/src/custom_rolling/: mod.rs  non_blocking.rs  worker.rs
src/examples/tracing-test/src/dispatcher/: mod.rs
src/examples/tracing-test/src/in_future/: mod.rs
src/examples/tracing-test/src/macros/: mod.rs
src/examples/tracing-test/src/simple_file/: mod.rs
src/examples/tracing-test/src/subscribers/: mod.rs
src/examples/tracing-test/src/trace/: mod.rs
src/protos/: catalogue_service.proto  (+1 more)
src/utils/: Cargo.toml
(+8 files in other folders)
