[package]
name = "catalogue_master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.1"
tokio = { version = "1.19", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1" }

futures = "0.3"

h2 = "0.3"

serde = { version = "1.0", features = ["derive"] }
prost = { version = "0.10", features = ["default"] }
tonic = { version = "0.7", features = ["default"] }

async_logger_log = "0.2"
log = "0.4"

[build-dependencies]
tonic-build = { version = "0.7", features = ["prost"] }
