[package]
name = "chunk_handler_register"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catalogue_master = { path = "../.." }

tokio = { version = "1.19", features = ["rt-multi-thread"] }

futures = "0.3"

tonic = { version = "0.7", features = ["default"] }

